# scout-rtx

./: README.md  pyproject.toml  train.py
bb-offload/: queue.json
bigbang-bridge/: README.md  cli.py  manifest.yaml
docs/: HARDWARE_PROFILE.md  OFFLOAD_GUIDE.md
programs/: program-ava.md  program-base.md  program-inkling-small.md  program-turnover.md  program-write.md
scripts/: publish-release.ps1  publish-release.sh  run-autonomous.ps1  setup-win.ps1  sync-to-hatch.ps1
tests/: conftest.py  test_cli.py  test_publish_release_sh.py  test_train_units.py
