[project]
name = "autoresearch-rtx-custom"
version = "0.6.0"
description = "Davis Custom: Alienware RTX 4080/4090 autonomous researcher — Ava + Turnover Shield + Write tracks, BigBang offload bridge"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "requests>=2.32.0",
    "rustbpe>=0.1.0",
    "tiktoken>=0.11.0",
    "torch==2.9.1",
    "typer>=0.12.0",
    "rich>=13.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

# Solo personal project, no connection to employer, built with public/free-tier only
# Custom for Davis Alienware RTX 4080 16GB / 4090 24GB — see docs/HARDWARE_PROFILE.md
# Offload guide: docs/OFFLOAD_GUIDE.md
# Programs: programs/program-*.md (base, ava, turnover, write)
